trying to get frontmatter and mdx

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,8 +1,13 @@
+---
+title: 'Frontmatter Site Title'
+description: 'This is the index description'
+heroImage: '../images/hero-banners/salon.jpg'
+---
+
 import { Link } from 'gatsby'
 
-import Layout from '../components/layout'
-import Image from '../components/image'
-import SEO from '../components/seo'
+import Layout from '../components/Layout'
+import SEO from '../components/Seo'
 
 <SEO title="Home" keywords={['gatsby', 'application', 'react']} />
 
