--- a/src/pages/page-2.mdx
+++ b/src/pages/page-2.mdx
@@ -1,6 +1,6 @@
 import { Link } from 'gatsby'
-import Layout from '../components/layout'
-import SEO from '../components/seo'
+import Layout from '../components/Layout'
+import SEO from '../components/Seo'
 
 <SEO title="Page two" />
 
